# my_website

./: .editorconfig  .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  Trunk.toml  index.html  style.scss
frontend/src/: lib.rs  main.rs  routes.rs
frontend/src/components/organisms/: helmet.rs
frontend/src/pages/: blog_page.rs  home_page.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
