[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
wasm-logger = "0.2.0"
yew = { version = "0.20.0", features = ["csr", "ssr", "hydration"] }
yew-router = "0.17.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "HtmlHeadElement",
]
